--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1 {
   color: #a49393;
   font-family: "Roboto";
   font-size: 50px;
-  margin-top: 50px;
+  margin: 8px;
   text-align: center;
 }
 
